-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    4.1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2012 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 4.1
-----------------

8/30/12
    - Major speed-up in @opt_model/linear_constraints() by building
      transpose of A (assigning to full columns) then transposing
      back as opposed to building A directly (assigning full rows).

8/1/12
    - Added function margcost() for computing the marginal cost of
      generation.

7/20/12
    - Added utility function @opt_model/describe_idx() to indentify
      variable, constraint or cost row indices to aid in debugging.

7/18/12
    - Made N optional field (default is identity matrix) in
      @opt_model/add_costs().
    - Added missing optional 2nd arg to @opt_model/build_cost_params().

6/26/12
    - Fixed a bug in the new @opt_model/add_vars when adding a var
      set of dimension zero.

6/18/12
    - Updated Gurobi interface for compatibility with native Matlab
      support introduced in Gurobi 5.
      INCOMPATIBLE CHANGE: No longer works with older Gurobi 4.x/
      gurobi_mex() interface.
    
5/3/12
    - Reimplementated @opf_model class as sub-class of the new
      @opt_model class, which supports indexed named sets of
      variables, constraints and costs.

5/2/12
    - In opf_setup(), take magnitude of initial voltages at generator
      buses from bus matrix (VM), not gen matrix (VG).

4/30/12
    - Fixed a bug in int2ext() where converting a case to internal
      ordering before calling runpf() or runopf() could result in
      a fatal error due to mismatched number of columns in internal
      and external versions of data matrices. Thanks to Nasiruzzaman
      and Shiyang Li for reporting and detailing the issue.
    - Fixed fatal bug in MIPS for unconstrained, scalar problems.